feature(utility-server-monitoring): add postgres and data export monitoring

--- a/etc/servers/utility.cfg
+++ b/etc/servers/utility.cfg
@@ -7,3 +7,29 @@ define host{
         alias                   Utility Server
         address                 utility.itsjuice.com
 }
+
+# monitor the running postgres service processes
+
+define service{
+        use                     generic-service
+        host_name               utility-server
+        service_description     Postgres Processes
+        notification_interval   0
+        check_command           check_nrpe_1arg!check_postgres_processes
+}
+
+# monitor the running of the podium and mediaserver exports
+
+define service{
+  use                 generic-service         ; Name of service template to use
+  host_name           utility-server
+  service_description Podium Data Export
+  check_command       check_nrpe_1arg!check_podium_export
+}
+
+define service{
+  use                 generic-service         ; Name of service template to use
+  host_name           utility-server
+  service_description Mediaplayer Data Export
+  check_command       check_nrpe_1arg!check_mediaplayer_export
+}
