feature(bmw-serviceweb): extend monitoring

--- a/etc/objects/commands.cfg
+++ b/etc/objects/commands.cfg
@@ -36,6 +36,16 @@ define command{
         command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u '$ARG1$' -e '$ARG2$' -r '$ARG3$'
 }
 
+define command{
+        command_name    check-http-content
+        command_line    $USER1$/check_http -H '$HOSTADDRESS$' -I '$HOSTADDRESS$' -s '$ARG2$' '$ARG1$'
+}
+
+define command{
+        command_name    check-https-content
+        command_line    $USER1$/check_http -H '$HOSTADDRESS$' -I '$HOSTADDRESS$' -S -s '$ARG2$' '$ARG1$'
+}
+
 ################################################################################
 #
 # SAMPLE NOTIFICATION COMMANDS
