--- a/etc/servers/bmw-service.cfg
+++ b/etc/servers/bmw-service.cfg
@@ -5,7 +5,15 @@ define host{
         use                     heroku-host            ; Name of host template to use
         host_name               bmw-service
         alias                   BMW Service
-        address                 bmw-service.co.uk
+        address                 www.bmw-service.co.uk
+}
+
+define service {
+        use                             generic-service
+        host_name                       bmw-service
+        service_description             HTTP Frontend Content
+        check_command                   check_http!/
+        notification_interval           0 ; set > 0 if you want to be renotified
 }
 
 define service {
@@ -13,6 +21,14 @@ define service {
         host_name                       bmw-service
         service_description             HTTP Frontend
         check_command                   check_http!/
+        notification_interval           0 ; set > 0 if you want to be renotified
+}
+
+define service {
+        use                             generic-service
+        host_name                       bmw-service
+        service_description             HTTP Frontend Content
+        check_command                   check-https-content!/!BMW Servicing.
         notification_interval           0 ; set > 0 if you want to be renotified
 }
 
