feature(emails): remove juice dev from emails

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -74,5 +74,5 @@ define contact{
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 nagiosadmin,juice,peterm
+        members                 nagiosadmin,peterm
         }
