feat: add bmw_vindex_dev

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -58,7 +58,17 @@ define contact{
         email                           peter.r.morris@gmail.com
 }
 
-
+define contact{
+        contact_name                    manu
+        alias                           Man
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    w,u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           manu@itsjuice.com
+}
 
 ###############################################################################
 ###############################################################################
@@ -74,5 +84,5 @@ define contact{
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 nagiosadmin,peterm
+        members                 nagiosadmin,peterm,manu
         }
