--- a/etc/objects/commands.cfg
+++ b/etc/objects/commands.cfg
@@ -33,7 +33,7 @@ define command{
 
 define command{
         command_name    check-http-json-string
-        command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u '$ARG1$' -e '$ARG2$' -r '$ARG3$'
+        command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u '$ARG1$' -e '$ARG2$' -r '$ARG3$' --user '$ARG5$' --pass '$ARG6$' -p '$ARG4$'
 }
 
 define command{
