--- a/etc/objects/commands.cfg
+++ b/etc/objects/commands.cfg
@@ -27,6 +27,16 @@ define command {
 # JSON commands
 ################################################################################
 define command{
+        command_name    check-https-json-string
+        command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u 'http://$HOSTADDRESS$$ARG1$' -e '$ARG2$' -r '$ARG3$' --user '$ARG5$' --pass '$ARG6$' -p '$ARG4$'
+}
+
+define command{
+        command_name    check-https-json-hard-threshold
+        command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u 'http://$HOSTADDRESS$$ARG1$' -e '$ARG2$' -c '$ARG3$' -w '$ARG3$' --user '$ARG5$' --pass '$ARG6$' -p '$ARG4$'
+}
+
+define command{
         command_name    check-http-json
         command_line    /usr/local/nagios/plugins/check_http_json/check_http_json.rb -u '$ARG1$' -e '$ARG2$' -w '$ARG3$' -c '$ARG4$'
 }
