chore(nags): remove nagging checks

--- a/etc/services/debian_remote.cfg
+++ b/etc/services/debian_remote.cfg
@@ -48,9 +48,9 @@ define service{
 
 # Define a service to check the processor load.
 
-define service{
-  use                             generic-service         ; Name of service template to use
-  hostgroup_name                  debian-remote
-  service_description             Current Load
-  check_command                   check_nrpe_1arg!check_load
-}
+#define service{
+#  use                             generic-service         ; Name of service template to use
+#  hostgroup_name                  debian-remote
+#  service_description             Current Load
+#  check_command                   check_nrpe_1arg!check_load
+#}
