feature(notifications): remove warnings add dev

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -39,7 +39,7 @@ define contact{
         alias                           Juice DEV
         service_notification_period     24x7
         host_notification_period        24x7
-        service_notification_options    w,u,c,r
+        service_notification_options    u,c,r
         host_notification_options       d,r
         service_notification_commands   notify-service-by-email
         host_notification_commands      notify-host-by-email
@@ -51,7 +51,7 @@ define contact{
         alias                           Peter Morris (GMAIL)
         service_notification_period     24x7
         host_notification_period        24x7
-        service_notification_options    w,u,c,r
+        service_notification_options    u,c,r
         host_notification_options       d,r
         service_notification_commands   notify-service-by-email
         host_notification_commands      notify-host-by-email
@@ -84,5 +84,5 @@ define contact{
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 nagiosadmin,peterm,manu
+        members                 nagiosadmin,peterm,manu,juice
         }
