feature/vindex-live-change

--- a/etc/servers/bmw-vindex-live.cfg
+++ b/etc/servers/bmw-vindex-live.cfg
@@ -5,7 +5,7 @@ define host{
         use                     heroku-host            ; Name of host template to use
         host_name               bmw-vindex-live
         alias                   bmw-vindex-live
-        address                 bmw-vindex-live.herokuapp.com
+        address                 vindex.bmwlaunchpad.co.uk
 }
 
 define service{
