chore(emails): added olis home email

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -59,6 +59,18 @@ define contact{
 }
 
 define contact{
+        contact_name                    olic
+        alias                           Oli Cannings (home email)
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           oli@live.co.uk
+}
+
+define contact{
         contact_name                    manu
         alias                           Man
         service_notification_period     24x7
@@ -84,5 +96,5 @@ define contact{
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 nagiosadmin,peterm,manu,juice
+        members                 nagiosadmin,peterm,manu,olic,juice
         }
