--- a/etc/servers/bmw-vindex-staging.cfg
+++ b/etc/servers/bmw-vindex-staging.cfg
@@ -26,7 +26,7 @@ define service{
         use                     generic-service
         host_name               bmw-vindex-staging
         service_description     BMW VIN
-        check_command           check-https-json-string!/health/sample_vin?brand=bmw!0.brand_id!BMW!message!abel!letmein  
+        check_command           check-https-json-regex!/health/sample_vin?brand=bmw!0.brand_id!^BMW!message!abel!letmein  
 }
 
 define service{
