feature/monitor-mini-destiny

--- a/etc/groups/debian-remote.cfg
+++ b/etc/groups/debian-remote.cfg
@@ -2,5 +2,5 @@
 define hostgroup {
 	hostgroup_name	debian-remote
 	alias		Debian Remote Servers
-	members		utility-server
+	members		utility-server,mini-destiny-server
 }
