chore/modulus-admins

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -5,7 +5,7 @@
 # NOTES: This config file provides you with some example contact and contact
 #        group definitions that you can reference in host and service
 #        definitions.
-#       
+#
 #        You don't need to keep these definitions in a separate file from your
 #        other object definitions.  This has been done just to make things
 #        easier to understand.
@@ -23,7 +23,7 @@
 ###############################################################################
 
 # Just one contact defined by default - the Nagios admin (that's you)
-# This contact definition inherits a lot of default values from the 'generic-contact' 
+# This contact definition inherits a lot of default values from the 'generic-contact'
 # template which is defined elsewhere.
 
 define contact{
@@ -71,6 +71,30 @@ define contact{
 }
 
 define contact{
+        contact_name                    modulusyh
+        alias                           modulus YH
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           mailto:yh@modulus-ltd.co.uk
+}
+
+define contact{
+        contact_name                    modulustb
+        alias                           modulus TB
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           mailto:tb@modulus-ltd.co.uk
+}
+
+define contact{
         contact_name                    manu
         alias                           Man
         service_notification_period     24x7
@@ -97,4 +121,10 @@ define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
         members                 nagiosadmin,peterm,manu,olic,juice
-        }
+}
+
+define contactgroup{
+        contactgroup_name       modulusadmins
+        alias                   Modulus Administrators
+        members                 modulustb,modulusyh
+}
