Change email addresses
strip off the mailto: protocol

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -79,7 +79,7 @@ define contact{
         host_notification_options       d,r
         service_notification_commands   notify-service-by-email
         host_notification_commands      notify-host-by-email
-        email                           mailto:yh@modulus-ltd.co.uk
+        email                           yh@modulus-ltd.co.uk
 }
 
 define contact{
@@ -91,7 +91,7 @@ define contact{
         host_notification_options       d,r
         service_notification_commands   notify-service-by-email
         host_notification_commands      notify-host-by-email
-        email                           mailto:tb@modulus-ltd.co.uk
+        email                           tb@modulus-ltd.co.uk
 }
 
 define contact{
