chore(destiny): tweak monitoring
remove podium monitoring for mini-destiny (no podium)
add podium2 monitoring for utility
add reporting monitoring to mini-destiny

--- a/etc/servers/utility.cfg
+++ b/etc/servers/utility.cfg
@@ -1,5 +1,5 @@
 # Utility Server
-# 
+#
 
 define host{
         use                     linux-server            ; Name of host template to use
@@ -25,6 +25,13 @@ define service{
   host_name           utility-server
   service_description Podium Data Export
   check_command       check_nrpe_1arg!check_podium_export
+}
+
+define service{
+  use                 generic-service         ; Name of service template to use
+  host_name           utility-server
+  service_description Podium2 Data Export
+  check_command       check_nrpe_1arg!check_podium2_export
 }
 
 define service{
