--- a/etc/servers/mini-nuc-reporting.cfg
+++ b/etc/servers/mini-nuc-reporting.cfg
@@ -8,7 +8,7 @@ define host{
         use                     generic-host            ; Name of host template to use
         host_name               mini-nuc-reporting
         alias                   NUC Reporting
-        address                 mini-detiny.itsjuice.com
+        address                 mini-destiny.itsjuice.com
         check_command           check_http!/admin
 }
 
