chore(notifications): expand to include BMW

--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -95,6 +95,42 @@ define contact{
 }
 
 define contact{
+        contact_name                    bmwnc
+        alias                           BMW Nick Cranmer
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           Nick.Cranmer@bmw.co.uk
+}
+
+define contact{
+        contact_name                    bmwtf
+        alias                           BMW Tom Fraser
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           Tom.Fraser@bmw.co.uk
+}
+
+define contact{
+        contact_name                    bmwss
+        alias                           BMW Service Support
+        service_notification_period     24x7
+        host_notification_period        24x7
+        service_notification_options    u,c,r
+        host_notification_options       d,r
+        service_notification_commands   notify-service-by-email
+        host_notification_commands      notify-host-by-email
+        email                           bmwservicesupport@bmw.co.uk
+}
+
+define contact{
         contact_name                    manu
         alias                           Man
         service_notification_period     24x7
@@ -127,4 +163,10 @@ define contactgroup{
         contactgroup_name       modulusadmins
         alias                   Modulus Administrators
         members                 modulustb,modulusyh
+}
+
+define contactgroup{
+        contactgroup_name       bmwadmins
+        alias                   BMW Administrators
+        members                 bmwss,bmwtf,bmwnc
 }
