--- a/etc/servers/bmw-service.cfg
+++ b/etc/servers/bmw-service.cfg
@@ -28,6 +28,6 @@ define service{
         use                     generic-service
         host_name               bmw-service
         service_description     Modulus API
-        contact_groups          admins,modulusadmins
+        contact_groups          admins,modulusadmins,bmwadmins
         check_command           check-http-json-string!https://bmwmp.org/sbol/?token=gO0TR2yNY9AoU6E3Rt0HnCX806UwpvoY0CeiJT-igmkOxer8AtAaYBqWt7t9lcGqj4thH7FFG503MQ_5-HRt7UOkPRFVMGdE14WgSQ7dlNrodscPysWWhrIZFNP0YMIA!series!3 Series!x
 }
