--- a/etc/objects/contacts.cfg
+++ b/etc/objects/contacts.cfg
@@ -127,7 +127,7 @@ define contact{
         host_notification_options       d,r
         service_notification_commands   notify-service-by-email
         host_notification_commands      notify-host-by-email
-        email                           bmwservicesupport@bmw.co.uk
+        email                           bmwservicesupport@emounlimited.com
 }
 
 define contact{
