chore(podium): remove podium data tracking

--- a/etc/servers/mini-destiny.cfg
+++ b/etc/servers/mini-destiny.cfg
@@ -23,6 +23,13 @@ define service{
 define service{
   use                 generic-service         ; Name of service template to use
   host_name           mini-destiny-server
+  service_description Podium2 Data Export
+  check_command       check_nrpe_1arg!check_podium2_export
+}
+
+define service{
+  use                 generic-service         ; Name of service template to use
+  host_name           mini-destiny-server
   service_description Mediaplayer Data Export
   check_command       check_nrpe_1arg!check_mediaplayer_export
 }
