--- a/etc/servers/nuc-reporting.cfg
+++ b/etc/servers/nuc-reporting.cfg
@@ -28,13 +28,14 @@ define service{
         check_command           check_nrpe_1arg!check_sidekiq_processes
 }
 
-#define service{
-#        use                     generic-service
-#        host_name               nuc-reporting
-#        service_description     Sidekiq Queue
-#        notification_interval   0
-#        check_command           check_nrpe_1arg!check_sidekiq_queue
-#}
+define service{
+        use                     generic-service
+        host_name               nuc-reporting
+        service_description     Sidekiq Queue
+        notification_interval   0
+        check_command           check_nrpe_1arg!check_sidekiq_queue
+}
+
 define service{
         use                     generic-service
         host_name               nuc-reporting
