--- a/etc/servers/utility.cfg
+++ b/etc/servers/utility.cfg
@@ -18,14 +18,7 @@ define service{
         check_command           check_nrpe_1arg!check_postgres_processes
 }
 
-# monitor the running of the podium and mediaserver exports
-
-define service{
-  use                 generic-service         ; Name of service template to use
-  host_name           utility-server
-  service_description Podium Data Export
-  check_command       check_nrpe_1arg!check_podium_export
-}
+# monitor the running of the podium2 and mediaserver exports
 
 define service{
   use                 generic-service         ; Name of service template to use
