chore(monitoring): expansion.
Added monitoring for :-

bmw community
mini community
bmw connected drive
arriva driver training
bmw media player custom channels (staging and production)
bmw sales accelerator

--- a/etc/groups/heroku-sites.cfg
+++ b/etc/groups/heroku-sites.cfg
@@ -2,6 +2,6 @@
 define hostgroup {
 	hostgroup_name	heroku-sites
 	alias		Heroku Sites
-	members		dealerlp,auclp,corplp,minilp
-#,bmw-explore,bmw-range-comparator,car-comparator
+	members		dealerlp,auclp,corplp,minilp,sales-accelerator,bmw-handover,mini-community,bmw-community,bmw-connected-drive
+#,bmw-explore,bmw-range-comparator,car-comparator,bmw-connected-drive
 }
